[flake8]
exclude = build,.git,./arouse/_dj/utils/lru_cache.py,./arouse/_dj/utils/six.py,./arouse/_dj/conf/app_template/*,./arouse/_dj/dispatch/weakref_backports.py,./tests/.env,./xmlrunner,tests/view_tests/tests/py3_test_debug.py,tests/template_tests/annotated_tag_function.py
ignore = E305,E741,E743,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = arouse
line_length = 79
multi_line_output = 5
not_skip = __init__.py

[metadata]
license-file = LICENSE

[wheel]
universal = 1

